src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.image-text-block {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 24px;
}

.image {
  width: 150px; /* Set a fixed width */
  height: 150px; /* Set a fixed height to match the width */
  border-radius: 50%;
  object-fit: cover;
}

.text {
  padding: 0 20px;
  max-width: 500px;
}


.image-description-block {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  max-width: 400px;
  margin: 20px auto;
}

.image-proj {
  width: 300px; /* Set a fixed width */
  height: 150px; /* Set a fixed height to match the width */
  /* border-radius: 50%; */
  object-fit: cover;
}

.description {
  margin-top: 4px;
  font-size: 1.2em;
  color: #333;
}

.image-description-blocks {
  display: flex;
  justify-content: center;
  flex-wrap: wrap; /* Allow wrapping on smaller screens */
}

